getting cookie insted of the query for visitors
